{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 285,
  "lineage": "7c401761-8d04-9974-4be1-ea46123163b3",
  "resources": [
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:727646470302:security-group/sg-0f5db7a87d9a7be48",
            "description": "Allow SSH access to Bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f5db7a87d9a7be48",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "memo-bastion-sg",
            "name_prefix": "",
            "owner_id": "727646470302",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "memo-bastion-sg"
            },
            "tags_all": {
              "Name": "memo-bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0222bddc9126017a6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.memo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "eks_cluster_external_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "External access to EKS cluster API",
            "from_port": 443,
            "id": "sgrule-1051440854",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d9e85347d66f665c",
            "security_group_rule_id": "sgr-04b4577be56271b2b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.module.eks_cluster.aws_security_group.cluster",
            "module.vpc.aws_vpc.memo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "eks_cluster_external_access_10250",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "External access to EKS kubelet API",
            "from_port": 10250,
            "id": "sgrule-2161540365",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d9e85347d66f665c",
            "security_group_rule_id": "sgr-02f184186a1cec388",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.module.eks_cluster.aws_security_group.cluster",
            "module.vpc.aws_vpc.memo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "eks_cluster_external_access_6443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "External access to EKS cluster API (6443)",
            "from_port": 6443,
            "id": "sgrule-2209683426",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d9e85347d66f665c",
            "security_group_rule_id": "sgr-042a427e07b12adde",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.module.eks_cluster.aws_security_group.cluster",
            "module.vpc.aws_vpc.memo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.eks_cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:727646470302:security-group/sg-0d9e85347d66f665c",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0d9e85347d66f665c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "External access to EKS cluster API (6443)",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "External access to EKS cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "External access to EKS kubelet API",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a5b20dfd38ca048a"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "memo-eks-cluster-cluster-2025071500402454370000000e",
            "name_prefix": "memo-eks-cluster-cluster-",
            "owner_id": "727646470302",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "memo-eks-cluster-cluster",
              "Project": "memo"
            },
            "tags_all": {
              "Name": "memo-eks-cluster-cluster",
              "Project": "memo"
            },
            "timeouts": null,
            "vpc_id": "vpc-0222bddc9126017a6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.memo-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks_cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:727646470302:security-group/sg-0a5b20dfd38ca048a",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a5b20dfd38ca048a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0f9f3a0a308cc86ed"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d9e85347d66f665c"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d9e85347d66f665c"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d9e85347d66f665c"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d9e85347d66f665c"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d9e85347d66f665c"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d9e85347d66f665c"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "memo-eks-cluster-node-2025071500402468780000000f",
            "name_prefix": "memo-eks-cluster-node-",
            "owner_id": "727646470302",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "memo-eks-cluster-node",
              "Project": "memo",
              "kubernetes.io/cluster/memo-eks-cluster": "owned"
            },
            "tags_all": {
              "Name": "memo-eks-cluster-node",
              "Project": "memo",
              "kubernetes.io/cluster/memo-eks-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0222bddc9126017a6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.memo-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-3138565172",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d9e85347d66f665c",
            "security_group_rule_id": "sgr-025793ad2c55a36f4",
            "self": false,
            "source_security_group_id": "sg-0a5b20dfd38ca048a",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.module.eks_cluster.aws_security_group.cluster",
            "module.eks.module.eks_cluster.aws_security_group.node",
            "module.vpc.aws_vpc.memo-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-3800126788",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0a5b20dfd38ca048a",
            "security_group_rule_id": "sgr-01842ad1a0b6750f0",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.module.eks_cluster.aws_security_group.cluster",
            "module.eks.module.eks_cluster.aws_security_group.node",
            "module.vpc.aws_vpc.memo-vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-2617690779",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a5b20dfd38ca048a",
            "security_group_rule_id": "sgr-038a165f66eaa8a98",
            "self": false,
            "source_security_group_id": "sg-0d9e85347d66f665c",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.module.eks_cluster.aws_security_group.cluster",
            "module.eks.module.eks_cluster.aws_security_group.node",
            "module.vpc.aws_vpc.memo-vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-3295605771",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a5b20dfd38ca048a",
            "security_group_rule_id": "sgr-04d4d383ff52b1022",
            "self": false,
            "source_security_group_id": "sg-0d9e85347d66f665c",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.module.eks_cluster.aws_security_group.cluster",
            "module.eks.module.eks_cluster.aws_security_group.node",
            "module.vpc.aws_vpc.memo-vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-221025181",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a5b20dfd38ca048a",
            "security_group_rule_id": "sgr-038e8eb7ddc84624e",
            "self": false,
            "source_security_group_id": "sg-0d9e85347d66f665c",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.module.eks_cluster.aws_security_group.cluster",
            "module.eks.module.eks_cluster.aws_security_group.node",
            "module.vpc.aws_vpc.memo-vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-510701500",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a5b20dfd38ca048a",
            "security_group_rule_id": "sgr-0cf70d0ed718a4115",
            "self": false,
            "source_security_group_id": "sg-0d9e85347d66f665c",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.module.eks_cluster.aws_security_group.cluster",
            "module.eks.module.eks_cluster.aws_security_group.node",
            "module.vpc.aws_vpc.memo-vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-2060557431",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a5b20dfd38ca048a",
            "security_group_rule_id": "sgr-0c211d644bfa09014",
            "self": false,
            "source_security_group_id": "sg-0d9e85347d66f665c",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.module.eks_cluster.aws_security_group.cluster",
            "module.eks.module.eks_cluster.aws_security_group.node",
            "module.vpc.aws_vpc.memo-vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-3475565660",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a5b20dfd38ca048a",
            "security_group_rule_id": "sgr-0eabada649c5fe07d",
            "self": false,
            "source_security_group_id": "sg-0d9e85347d66f665c",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.module.eks_cluster.aws_security_group.cluster",
            "module.eks.module.eks_cluster.aws_security_group.node",
            "module.vpc.aws_vpc.memo-vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-4077423461",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a5b20dfd38ca048a",
            "security_group_rule_id": "sgr-033d073d3584acd52",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.module.eks_cluster.aws_security_group.cluster",
            "module.eks.module.eks_cluster.aws_security_group.node",
            "module.vpc.aws_vpc.memo-vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1268186166",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a5b20dfd38ca048a",
            "security_group_rule_id": "sgr-0005dcff692737af1",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.module.eks_cluster.aws_security_group.cluster",
            "module.eks.module.eks_cluster.aws_security_group.node",
            "module.vpc.aws_vpc.memo-vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-4022951897",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0a5b20dfd38ca048a",
            "security_group_rule_id": "sgr-0523392cfd82db8e8",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.module.eks_cluster.aws_security_group.cluster",
            "module.eks.module.eks_cluster.aws_security_group.node",
            "module.vpc.aws_vpc.memo-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "memo_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:727646470302:security-group/sg-0ace1cadcfdaa500e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "id": "sg-0ace1cadcfdaa500e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d9e85347d66f665c"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "memo-rds-sg-20250715004025734700000010",
            "name_prefix": "memo-rds-sg-",
            "owner_id": "727646470302",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Project": "memo"
            },
            "tags_all": {
              "Environment": "dev",
              "Project": "memo"
            },
            "timeouts": null,
            "vpc_id": "vpc-0222bddc9126017a6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.module.eks_cluster.aws_security_group.cluster",
            "module.vpc.aws_vpc.memo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bef0fde8ce9668b3",
            "arn": "arn:aws:ec2:ap-northeast-2:727646470302:elastic-ip/eipalloc-0bef0fde8ce9668b3",
            "association_id": "eipassoc-04f05adcd21c8ab5d",
            "domain": "vpc",
            "id": "eipalloc-0bef0fde8ce9668b3",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0ae622c1ebbd8f1e4",
            "private_dns": "ip-10-0-1-114.ap-northeast-2.compute.internal",
            "private_ip": "10.0.1.114",
            "public_dns": "ec2-3-39-75-208.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.39.75.208",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "memo-vpc-nat-eip"
            },
            "tags_all": {
              "Name": "memo-vpc-nat-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:727646470302:internet-gateway/igw-0f4acdba96fa6f92b",
            "id": "igw-0f4acdba96fa6f92b",
            "owner_id": "727646470302",
            "tags": {
              "Name": "memo-vpc-igw"
            },
            "tags_all": {
              "Name": "memo-vpc-igw"
            },
            "vpc_id": "vpc-0222bddc9126017a6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.memo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bef0fde8ce9668b3",
            "association_id": "eipassoc-04f05adcd21c8ab5d",
            "connectivity_type": "public",
            "id": "nat-0d2d36ce89967b658",
            "network_interface_id": "eni-0ae622c1ebbd8f1e4",
            "private_ip": "10.0.1.114",
            "public_ip": "3.39.75.208",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-06bd9da8d7c925ee9",
            "tags": {
              "Name": "memo-vpc-nat"
            },
            "tags_all": {
              "Name": "memo-vpc-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public1",
            "module.vpc.aws_vpc.memo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-066f06c93e07ff1311080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d2d36ce89967b658",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-066f06c93e07ff131",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public1",
            "module.vpc.aws_vpc.memo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f4acdba96fa6f92b",
            "id": "r-rtb-060f2c49b270314351080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-060f2c49b27031435",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.memo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:727646470302:route-table/rtb-066f06c93e07ff131",
            "id": "rtb-066f06c93e07ff131",
            "owner_id": "727646470302",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d2d36ce89967b658",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "memo-vpc-private-rt"
            },
            "tags_all": {
              "Name": "memo-vpc-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0222bddc9126017a6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.memo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:727646470302:route-table/rtb-060f2c49b27031435",
            "id": "rtb-060f2c49b27031435",
            "owner_id": "727646470302",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f4acdba96fa6f92b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "memo-vpc-public-rt"
            },
            "tags_all": {
              "Name": "memo-vpc-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0222bddc9126017a6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.memo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f37247536f737f3f",
            "route_table_id": "rtb-066f06c93e07ff131",
            "subnet_id": "subnet-07af4d0c0b57b4ea3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private1",
            "module.vpc.aws_vpc.memo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d084c525fa71ef47",
            "route_table_id": "rtb-066f06c93e07ff131",
            "subnet_id": "subnet-097b4cdb9e1064a14"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private2",
            "module.vpc.aws_vpc.memo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a0b0f39595de54be",
            "route_table_id": "rtb-066f06c93e07ff131",
            "subnet_id": "subnet-0488e1d08bbc247ad"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private3",
            "module.vpc.aws_vpc.memo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02a37975a0c6ff518",
            "route_table_id": "rtb-066f06c93e07ff131",
            "subnet_id": "subnet-02fd8a94fa71561f7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private4",
            "module.vpc.aws_vpc.memo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f2746b586b5332a8",
            "route_table_id": "rtb-060f2c49b27031435",
            "subnet_id": "subnet-06bd9da8d7c925ee9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public1",
            "module.vpc.aws_vpc.memo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:727646470302:subnet/subnet-07af4d0c0b57b4ea3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07af4d0c0b57b4ea3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "727646470302",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "memo-vpc-private-a"
            },
            "tags_all": {
              "Name": "memo-vpc-private-a"
            },
            "vpc_id": "vpc-0222bddc9126017a6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.memo-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:727646470302:subnet/subnet-097b4cdb9e1064a14",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-097b4cdb9e1064a14",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "727646470302",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "memo-vpc-private-b"
            },
            "tags_all": {
              "Name": "memo-vpc-private-b"
            },
            "vpc_id": "vpc-0222bddc9126017a6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.memo-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:727646470302:subnet/subnet-0488e1d08bbc247ad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0488e1d08bbc247ad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "727646470302",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "memo-vpc-private-c"
            },
            "tags_all": {
              "Name": "memo-vpc-private-c"
            },
            "vpc_id": "vpc-0222bddc9126017a6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.memo-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:727646470302:subnet/subnet-02fd8a94fa71561f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2d",
            "availability_zone_id": "apne2-az4",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02fd8a94fa71561f7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "727646470302",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "memo-vpc-private-d"
            },
            "tags_all": {
              "Name": "memo-vpc-private-d"
            },
            "vpc_id": "vpc-0222bddc9126017a6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.memo-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:727646470302:subnet/subnet-06bd9da8d7c925ee9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06bd9da8d7c925ee9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "727646470302",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "memo-vpc-public-a"
            },
            "tags_all": {
              "Name": "memo-vpc-public-a"
            },
            "vpc_id": "vpc-0222bddc9126017a6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.memo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:727646470302:subnet/subnet-0a925897d38e14682",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a925897d38e14682",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "727646470302",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "memo-vpc-public-b"
            },
            "tags_all": {
              "Name": "memo-vpc-public-b"
            },
            "vpc_id": "vpc-0222bddc9126017a6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.memo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "memo-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:727646470302:vpc/vpc-0222bddc9126017a6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b2d49554bd569225",
            "default_route_table_id": "rtb-0f382fd690b5fb405",
            "default_security_group_id": "sg-0d69ce79cc972573a",
            "dhcp_options_id": "dopt-04ccb4e7c3cb930ab",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0222bddc9126017a6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f382fd690b5fb405",
            "owner_id": "727646470302",
            "tags": {
              "Name": "memo-vpc"
            },
            "tags_all": {
              "Name": "memo-vpc"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}